--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
   <description>Liquibase Project for Spring Boot</description>
   <properties>
     <java.version>17</java.version>
+    <liquibase.url>jdbc:postgresql://localhost:5432/school</liquibase.url>
+    <liquibase.changeLogFile>classpath:db/changelog/changelog.sql</liquibase.changeLogFile>
+    <liquibase.outputChangeLogFile>genchangelog.sql</liquibase.outputChangeLogFile>
   </properties>
   <dependencies>
     <dependency>
