--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,8 +1,12 @@
 # this property file is used in local only
 url=jdbc:postgresql://localhost:5432/school
 changeLogFile=classpath:db/changelog/changelog.sql
+outputChangeLogFile=databaseFromZero.xml
 # referenceUrl=hibernate:spring:java.com.example.liquibase.springbootProject
-referenceUrl=hibernate:spring:com.example.liquibase?dialect=liquibase.ext.hibernate.database.HibernateGenericDialect
+# referenceUrl=hibernate:spring:com.example.liquibase?dialect=liquibase.ext.hibernate.database.HibernateGenericDialect
+# referenceUrl=hibernate:spring:com.example.liquibase.springbootProject?dialect=org.hibernate.dialect.PostgreSQLDialect&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+referenceUrl=hibernate:spring:com.example.liquibase.springbootProject?dialect=org.hibernate.dialect.PostgreSQLDialect
+diffChangeLogFile=database_diff.xml
 # dialect=org.hibernate.dialect.PostgreSQLDialect
 driver=org.postgresql.Driver
 username=system
