--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <properties>
     <java.version>18</java.version>
     <liquibase.propertyFile>src/main/resources/liquibase.properties</liquibase.propertyFile>
-    <liquibase.version>4.3.5</liquibase.version>
+    <liquibase.version>4.13.0</liquibase.version>
     <liquibase-hibernate5.version>4.3.5</liquibase-hibernate5.version>
     <javassist.version>3.24.0-GA</javassist.version>
     <validation-api.version>2.0.1.Final</validation-api.version>
@@ -30,6 +30,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
       <groupId>org.liquibase</groupId>
@@ -67,11 +71,6 @@
           <contexts>!test</contexts>
         </configuration>
         <dependencies>
-          <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-            <version>${liquibase.version}</version>
-          </dependency>
           <dependency>
             <groupId>org.liquibase.ext</groupId>
             <artifactId>liquibase-hibernate5</artifactId>
