--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 # this property file is used in local only
 url=jdbc:postgresql://localhost:5432/school
-changeLogFile=classpath:db/changelog/changelog.sql
+changeLogFile=classpath:db/changelog/master_changelog.sql
 outputChangeLogFile=databaseFromZero.xml
 # referenceUrl=hibernate:spring:java.com.example.liquibase.springbootProject
 # referenceUrl=hibernate:spring:com.example.liquibase?dialect=liquibase.ext.hibernate.database.HibernateGenericDialect
