--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.liquibase.change-log=classpath:db/changelog/changelog.sql
+spring.liquibase.change-log=classpath:db/changelog/master_changelog.sql
 
 ## Hibernate settings
 #DB should not be touched for production. Update manually with other tools instead. eg hbm2ddl, flyway, liquidbase
