--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,16 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.1</version>
+    <version>2.6.6</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
-  <groupId>com.example.liquibase</groupId>
-  <artifactId>springbootProject</artifactId>
+  <groupId>com.diplanner.server</groupId>
+  <artifactId>application</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>springbootProject</name>
-  <description>Liquibase Project for Spring Boot</description>
+  <name>application</name>
+  <description>Diplanner server side program</description>
   <properties>
-    <java.version>18</java.version>
+    <java.version>17</java.version>
     <liquibase.propertyFile>src/main/resources/liquibase.properties</liquibase.propertyFile>
     <liquibase.version>4.13.0</liquibase.version>
     <liquibase-hibernate5.version>4.3.5</liquibase-hibernate5.version>
